--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ home_menu_text: Main Page
 description: "C++ Developer with experience working on different kind of games for PC.
 Experienced with Unreal Engine 4 and comfortable with Unity, I enjoy programming engine tools."
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+url: "https://azatsu.github.io/" # the base hostname & protocol for your site
 author-url: ""
 
 # Theme customization
